# scyros

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  dist-workspace.toml  dummy_rust-toolchain.toml  flake.nix  release.toml
.github/workflows/: release-flake.yml  release.yml
src/: lib.rs
src/docs/: download.md  duplicate_files.md  duplicate_ids.md  extract_benchmarks.md  filter_languages.md  filter_metadata.md  forks.md  ids.md  languages.md  metadata.md  parse.md  pull_request.md
src/phases/: alt_parse.rs  download.rs  duplicate_files.rs  duplicate_ids.rs  extract_benchmarks.rs  filter_languages.rs  filter_metadata.rs  forks.rs  ids.rs  languages.rs  metadata.rs  mod.rs  parse.rs  pull_request.rs  tokenizer.rs  type_3_duplicate_files.rs
src/utils/: bow.rs  candidate_map.rs  csv.rs  dataframes.rs  fs.rs  github.rs  inverted_index.rs  json.rs  logger.rs  mod.rs  regex.rs  shell_commands.rs
tests/data/keywords/: c.json  java.json  scala_java.json
tests/data/phases/download/: to_download_local.csv.file_log.csv.expected  to_download_local.csv.project_log.csv.expected  to_download_local_c.csv  to_download_local_c.csv.file_log.csv.expected  to_download_local_c.csv.project_log.csv.expected
tests/data/phases/filter_metadata/: filter_metadata.csv.filtered.csv.expected
tests/data/phases/parse/: fn_comments.go  fn_comments_go.csv  fn_comments_go.csv.function_logs.csv.expected  fn_comments_go.csv.functions.csv.expected
tests/data/phases/parse/fn_comments.go.functions.expected/: 15-1  2-1
tests/data/phases/pull_request/: repos.csv.pulls.csv.expected  repos2.csv  repos_complete.csv.expected  repos_partial_output.csv.temp.expected
tests/data/phases/pull_request/prs2/5983/1128315983/: 1128315983_1.csv.expected  1128315983_2.csv.expected
tests/data/phases/type_3_duplicate_files/: parser_log.csv  python.json  test_parser_input.csv  test_parser_output.functions.csv
tests/data/phases/type_3_duplicate_files/files/: original.py  type_1.py  type_2.py  type_3.py
tests/data/phases/type_3_duplicate_files/files/original.py.functions/: 1-1
tests/data/phases/type_3_duplicate_files/files/type_1.py.functions/: 1-1
tests/data/phases/type_3_duplicate_files/files/type_2.py.functions/: 1-1
tests/data/phases/type_3_duplicate_files/files/type_3.py.functions/: 1-1
wix/: main.wxs
(+10 files in other folders)
