[package]
name = "scyros"
version = "0.2.3"
description = "A framework to design sound, reproducible and scalable mining repositories studies on GitHub."
authors = ["Andrea Gilot <andrea.gilot@it.uu.se>"]
edition = "2021"
repository = "https://github.com/fxpl/scyros"
rust-version = "1.93"
readme = "README.md"
include = ["src/**", "Cargo.toml", "Cargo.lock", "rust-toolchain.toml", "README.md", "LICENSE", "tests/**"]
keywords = ["data-mining", "github", "code-analysis", "repository-mining"]
categories = ["command-line-utilities", "science"]
license = "Apache-2.0"

[package.metadata.wix]
upgrade-guid = "D9D65031-82A9-4A47-BDE1-806672CB3E9E"
path-guid = "4EC8E0BD-6C25-4C76-A73A-EF5B970E5830"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc="1.2.52"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.2"
byteorder = "1.3.4"
chrono = "0.4.40"
clang = { version = "2.0.0", default-features = false, features = ["runtime"] }
clap = {version = "4.5.32", features=["derive","wrap_help"]}
crossbeam="0.7"
crossbeam-channel="0.5.0"
csv="1.1"
curl="0.4"
indicatif = "0.17.9"
json="0.12"
lazy_static = "1.4.0"
num-traits = "0.2"
pathdiff = "0.2.3"
petgraph = "0.8.2"
polars = { version = "0.46.0", features = ["lazy", "csv", "strings", "is_in"] }
rand="0.8.5"
regex="1.5.4"
reqwest = { version = "0.12", features = ["blocking"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tree-sitter = "0.25.3"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-fortran = "0.5.0"
tree-sitter-python = "0.23.6"
tree-sitter-typescript = "0.23.2"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-go = "0.23.4"
tree-sitter-scala = "0.24.0"
walkdir = "2.5.0"
zip = "6.0.0"
zip-extensions = "0.13.0"



[profile.release]
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.clippy]
should_implement_trait = "allow"
type_complexity = "allow"
too_many_arguments = "allow"

[[bin]]
name = "scyros"
path = "src/bin/main.rs"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt", "run-cargo-clippy"]

